# autonomous_market_research_agent

./: README copy.md  README.md  app.py  pyproject.toml  testing.ipynb
notebooks/: agentOLD.ipynb
src/: agent.py  base.py  conversation.py  tools.py
src/tools/: __init__.py  extract.py  reasoning.py  report.py  respond.py  search.py
templates/: clarification.jinja2  reasoning.jinja2  report_outline.jinja2  respond.jinja2  system_message.jinja2  write_report.jinja2
templatesOLD/: DEFAULT_REPORT_STRUCTURE.jinja2  REPORT_PLAN_QUERY_GENERATOR_PROMPT.jinja2  REPORT_PLAN_SECTION_GENERATOR_PROMPT.jinja2  REPORT_SECTION_QUERY_GENERATOR_PROMPT.jinja2  SECTION_WRITER_PROMPT.jinja2
